Src/UIComponents/Dashboard/Dashboard.css
.dashboard > .ellipse1 {
    position: absolute;
    width: 500px;
    height: 750px;

    top: 50%;
    left: -100px;
    
    filter: blur(20px);
    border-radius: 60%;
    background: rgba(221,182,255, 0.75);
    transform: rotate(60deg);
}

.dashboard > .ellipse2 {
    position: absolute;
    width: 500px;
    height: 750px;
    
    left: 80%;
    top: -200px;

    filter: blur(20px);
    border-radius: 60%;

    background: rgba(255, 204, 194, 0.75);
    transform: rotate(80deg);
}

.dashboard {
    position: relative;
    height: 100vh;
    overflow: hidden;

    display: grid;
    grid-template-columns: 300px 1fr;

    background: #E6E6E6;
}

.dashboard > .menu-container {
    position: relative;
    overflow-y: scroll;
    z-index: 10;
    padding: 2em;
    border-right: solid rgba(255, 255, 255, 0.1) 2px;
}
.dashboard .menu {
    position: static;
    display: flex;
    flex-direction: column;
}
.dashboard .menu-btn {
    display: none;
    background: white;
    width: 5em;
    height: 3em;
    font-size: 20px;
    outline: none;
}

.dashboard .vertical-line {
    border-right: solid rgba(0, 0, 0, 0.1) 1px;
    height: 100%;
    position: absolute;
    left: calc(100% - 3px);
    top: 0;
}

.logo {
    margin-left: 1.5rem;
    font-size: 30px;
    line-height: 34px;
    padding-bottom: 1em;
}
@media (max-width: 1000px) {
    .logo {
        margin: 0;
        padding: 0;
    }
}
.logo span {
    color: #DA1B36;
}

.dashboard .menu-option {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    font-size: 22px;
    margin: 1rem 0;
}
.dashboard .menu-option:hover {
    cursor: pointer;
}

.log-out-opt {
    color: black;
    text-decoration: none;
}
.log-out-opt:hover {
    color: #DA1B36;
}

.menu-option path {
    fill: #4A484E;
}
.active path {
    fill: #DA1B36;
}

.my-diary-submenu {
    display: flex;
    flex-direction: column;
    list-style-type: none;
}
.submenu-option {
    display: none;
    margin-top: 1em;
    margin-left: 3.5em;
}
.submenu-option:hover {
    cursor: pointer;
}
.dashboard .active:hover {
    cursor: default;
}
.active .submenu-option{
    display: block;
}
.submenu-option.active {
    color: #DA1B36;
}
.submenu-option:last-child {
    margin-bottom: 0;
}

.dashboard svg {
    margin: auto 1em;
}

.dashboard .profile-btn {
    width: 80%;
    max-width: 300px;
    height: 70px;
    position: absolute;
    bottom: 10%;

    display: flex;
    align-items: center;
    justify-content: center;
    
    font-size: 22px;
    background: #FFFFFF;
    padding: 1em 0;
    border: none;
    border-radius: 30px;
    outline: none;
}
@media (max-height: 700px), (max-width: 1000px) {
    .dashboard .profile-btn {
        position: static;
        width: 100%;
        margin: 2em 0;
    }
}
.dashboard .profile-btn:hover {
    cursor: pointer;
}
.dashboard .profile-btn.active:hover {
    cursor: default;
}

.dashboard > div:last-child {
    position: relative;
    overflow-y: scroll;
}
.dashboard div:last-child > * {
    z-index: 1;
}

@media (max-width: 1000px) {
    .dashboard {
        display: flex;
        flex-direction: column;
    }

    .dashboard .menu-container {
        box-sizing: border-box;
        min-height: 100px;
        padding: 1em;
    }

    .vertical-line {
        display: none;
    }
    .dashboard .title-container {
        position: sticky;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        border: none;
    }
    .dashboard .menu {
        display: none;
        margin-top: 1em;
        align-items: baseline;
    }

    .dashboard .menu-btn {
        display: block;
        position: absolute;
        left: 0;
        border-radius: 1em;
    }
}

@media (max-width: 450px) {
    .dashboard .title-container {
        justify-content: space-around;
    }
    .dashboard .menu-btn {
        order: -1;
        position: static;
    }
}

